# alfred

./: GEMINI.md  README.md  alfred.py  alfred.sh  benchmarking_tool.py  code_parser.py  code_suggestion.py  main.py  meu_codigo.py  pyproject.toml  test_execution_tool.py  test_main.py
commands/: benchmark_command.py  index_command.py  suggest_command.py  test_command.py
