[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred-cli"
version = "0.1.0"
description = "A personal development assistant."
authors = [{ name = "Andre Millet", email = "andre.millet@gmail.com" }]

[project.scripts]
alfred = "alfred:main"
